force-app/main/default/objects/WSM_Signature__c/WSM_Signature__c.object-meta.xml
<CustomObject>
    <description>A signature for specified Document Template</description>
    <label>WSM Signature</label>
    <nameField>
        <label>Signature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WSM Signatures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>