force-app/main/default/objects/WSM_Signature__c/fields/ContentDocumentId_of_Signature__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId_of_Signature__c</fullName>
    <description>This is the content document Id of the PNG of the signature held by this record.</description>
    <inlineHelpText>This is the content document Id of the PNG of the signature held by this record.</inlineHelpText>
    <label>ContentDocumentId of Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>