force-app/main/default/objects/WSM_Signature__c/fields/Field_Y_Offset_Pixels__c.field-meta.xml
<CustomField>
    <fullName>Field_Y_Offset_Pixels__c</fullName>
    <label>Field Y Offset (Pixels)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>