force-app/main/default/objects/WSM_Signature__c/fields/Originating_Signatory_Template__c.field-meta.xml
<CustomField>
    <fullName>Originating_Signatory_Template__c</fullName>
    <label>Originating Signatory Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>