force-app/main/default/objects/WSM_Signature__c/fields/Signature_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Signature_Last_Name__c</fullName>
    <label>Signature Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>