force-app/main/default/objects/WSM_Signature__c/fields/Signature_Method__c.field-meta.xml
<CustomField>
    <fullName>Signature_Method__c</fullName>
    <label>Signature Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text Entry</fullName>
            </value>
            <value>
                <fullName>Signature Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>