force-app/main/default/objects/WSM_Signature__c/fields/Signature_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Signature_Middle_Initial__c</fullName>
    <label>Signature Middle Initial</label>
    <length>1</length>
    <type>Text</type>
</CustomField>