force-app/main/default/objects/WSM_Signature__c/fields/WSM_Generated_Document__c.field-meta.xml
<CustomField>
    <fullName>WSM_Generated_Document__c</fullName>
    <label>WSM Generated Document</label>
    <referenceTo>WSM_Generated_Document__c</referenceTo>
    <relationshipName>Signatures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>